<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fi.nls.hakunapi</groupId>
	<artifactId>hakunapi</artifactId>
	<version>1.5.2</version>
	<packaging>pom</packaging>

	<name>Hakunapi</name>
	<description>Hakunapi is a server implementation of OGC API - Features</description>
	<url>https://github.com/nlsfi/hakunapi</url>

	<modules>
		<module>src</module>
		<module>webapp-javax</module>
		<module>webapp-jakarta</module>
	</modules>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Janne Heikkilä</name>
			<email>janne.heikkila@ubigu.fi</email>
			<organization>Ubigu Oy</organization>
			<organizationUrl>https://www.ubigu.fi/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/nlsfi/hakunapi.git</connection>
		<developerConnection>scm:git:ssh://github.com:nlsfi/hakunapi.git</developerConnection>
		<url>https://github.com/nlsfi/hakunapi/tree/main</url>
	</scm>

	<properties>
		<freemarker.version>2.3.33</freemarker.version>
		<jackson.version>2.17.1</jackson.version>
		<jackson-databind.version>2.17.1</jackson-databind.version>
		<swagger.version>2.2.21</swagger.version>
		<jts.version>1.20.0</jts.version>
		<hikari.version>4.0.3</hikari.version>
		<slf4j.version>1.7.25</slf4j.version>
		<log4j.version>2.23.1</log4j.version>
		<pgjdbc.version>42.7.4</pgjdbc.version>
		<geotools.version>32.1</geotools.version>
		<junit.version>4.13.2</junit.version>
		<mockito.version>4.11.0</mockito.version>
		<cyclonedx.version>2.7.3</cyclonedx.version>
	    <json-path.version>2.9.0</json-path.version>
	    <caffeine.version>2.9.3</caffeine.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-config-test</artifactId>
				<version>${project.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-source-postgis</artifactId>
				<version>${project.version}</version>
			</dependency>
            <dependency>
                <groupId>fi.nls.hakunapi</groupId>
                <artifactId>hakunapi-source-oracle</artifactId>
                <version>${project.version}</version>
            </dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-geojson</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-gpkg</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-jsonfg</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-source-gpkg</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-html</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-gml</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-smile</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-esbulk</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-csv</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-proj-gt</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-proj-jhe</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-cql2</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fi.nls.hakunapi</groupId>
				<artifactId>hakunapi-cql2-functions</artifactId>
				<version>${project.version}</version>
			</dependency>
            <dependency>
                <groupId>fi.nls.hakunapi</groupId>
                <artifactId>hakunapi-telemetry</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>${freemarker.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson-databind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-models</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-core</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>org.locationtech.jts</groupId>
				<artifactId>jts-core</artifactId>
				<version>${jts.version}</version>
			</dependency>
			<dependency>
				<groupId>com.zaxxer</groupId>
				<artifactId>HikariCP</artifactId>
				<version>${hikari.version}</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${pgjdbc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.3.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.2.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.simplify4u.plugins</groupId>
						<artifactId>sign-maven-plugin</artifactId>
						<version>1.0.1</version>
						<executions>
							<execution>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>dependency-track</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.cyclonedx</groupId>
							<artifactId>cyclonedx-maven-plugin</artifactId>
							<version>${cyclonedx.version}</version>
							<executions>
								<execution>
									<id>cyclonedx-aggregate</id>
									<phase>verify</phase>
									<goals>
										<goal>makeAggregateBom</goal>
									</goals>
								</execution>
							</executions>
							<configuration>
								<includeLicenseText>true</includeLicenseText>
								<includeCompileScope>true</includeCompileScope>
								<includeProvidedScope>true</includeProvidedScope>
								<includeRuntimeScope>true</includeRuntimeScope>
								<includeSystemScope>true</includeSystemScope>
								<includeTestScope>false</includeTestScope>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>

				<plugins>
					<plugin>
						<groupId>org.cyclonedx</groupId>
						<artifactId>cyclonedx-maven-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
